fix(header): adjust element spacing and background position

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -13,8 +13,8 @@ header {
 
 header::before {
     content: '';
-    width: 160%;
-    height: 95%;
+    width: 165%;
+    height: 100%;
     background: url('../images/header_background.png');
     background-size: cover;
     background-repeat: no-repeat;
@@ -29,6 +29,10 @@ header::before {
     width: 50%;
     font-size: 2rem;
     font-family: "Luckiest Guy", cursive;
+}
+
+.header__text {
+    margin: 1rem 0;
 }
 
 .header__button {
